--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-threadpool = { path = "../../threadpool" }
+threadpool = { git = "https://github.com/nihilok/rust_threadpool.git" }
