--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 threadpool = { git = "https://github.com/nihilok/rust_threadpool.git" }
-http_parser = { path = "./src/http_parser" }
+http_parser = { git = "https://github.com/nihilok/rust_http_parser.git" }
